--- a/trunk/INSTALL.txt
+++ b/trunk/INSTALL.txt
@@ -7,6 +7,19 @@ Extract the entire(!) ZIP file and follow the instzructions below for your
 Delphi / RAD Studio version.
 
 
+Delphi / RAD Studio XE - XE6 Installation
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1. Open the project group "Packages\RAD Studio XE*\RAD Studio XE*.groupproj"
+2. Right click on "VirtualTreesD*.bpl" and click "Install"
+3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
+   Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
+4. C++ Builder users only:
+   Go to "Tools > Options > Environment Options > C++ Options > Paths and Directories" 
+   a) Click "Library Path > [...]"                                                      
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+   b) Click "System Include path > [...]"                                                      
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK""
+
 Delphi 7 Installation
 ~~~~~~~~~~~~~~~~~~~~~
 1. Open the project group "Packages\Delphi 7\VirtualTrees.bpg"
@@ -38,16 +51,6 @@ Delphi 2010 Installation
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 
-
-Delphi / RAD Studio XE - XE6 Installation
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-1. Open the project group "Packages\RAD Studio XE*\RAD Studio XE*.groupproj"
-2. Right click on "VirtualTreesD*.bpl" and click "Install"
-3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
-   Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
-4. C++ Builder users only:
-   Go to "Tools > Options > Environment Options > C++ Options > Paths and Directories > Library Path > [...]"
-   Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 
 
 Troubleshooting
