--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
 V5.5: (Planned for 2nd half of September 2014)
+  * Added packages for RAD Studio XE7 / Delphi XE7
+  * Fixed issue #464: Vertical grid lines not computed correctly for spanned cells with header auto resize
+  * Fixed issue #442: Scrollbars are not updated for active VCL Style under XE2
+  * Fixed issue #463: HTML export shows grid lines in IE and Chrome, but not in Firefox
   * Fixed issue #460: Access violation in design time when setting "CheckBox" to True for a Virtual Treeview Column
   * Fixed issue #72: Call Application.CancelHint only if the current control is showing the hint
   * Fixed issue #461: corrected condition in TBaseVirtualTree.ScrollIntoView, so that not only partially (by the fixed area) covered columns but also totally covered columns are scrolled in view
@@ -17,7 +21,8 @@ V5.5: (Planned for 2nd half of September 2014)
   * Added suggestions of #438: Make some members visible to derived classes
   * Fixed issue #440: Context menu does not pop up if there is no selected node
   * Added C++ Builder link demand to VirtualTreesR.Lib as {$HPPEMIT}
-
+  * Imporved installation instructions, especially for C++ Builder
+  
 V5.4.1: (26 May 2014)
   * Added packages for C++ Builder XE6
   * If toAutoChangeScale is set in AutoOptions, the Virtual TreeView control now
