Edited wiki page DeveloperGuidelines through web user interface.

--- a/wiki/DeveloperGuidelines.wiki
+++ b/wiki/DeveloperGuidelines.wiki
@@ -58,7 +58,7 @@ else
  * Make the code navigation-friendly: explicitly declare the ancestor in *`class`* declaration even if it is the TObject and write the method name after the *`inherited`* keyword in overridden methods.
 Example:
 {{{
-destructor Destroy;
+destructor TForm1.Destroy;
 begin
   inherited Destroy;
 end;
