--- a/wiki/DeveloperGuidelines.wiki
+++ b/wiki/DeveloperGuidelines.wiki
@@ -17,7 +17,8 @@ When writing or changing code in this project, please follow these guidelines:
  * Indent blocks with two spaces. Tab character is not allowed.
  * Capitalization matters. Pascal is not case sensitive but that doesn't mean we should use the Shift key randomly. Hungarian notation style should only be used on enumerated values. Reserved words are all lowercased.
  * One statement per line. No statement is allowed after the *`then`* or *`else`* keywords.
- * Every statement should be closed by a semicolon even if it is not mandatory before the *`end`* keyword. There should be no whitespace before the semicolons.
+ * Every statement should be closed by a semicolon even if it is not mandatory before the *`end`* keyword.
+ * There should be no whitespace before the semicolons. There is one space after the semicolon in the parameter list.
  * Assignment: one space before and after the ` := ` assignment operator.
  * Variable declaration: one space after the colon (`Variable: Variant;`). One variable per line. Variable grouping (same type) should only be used in function parameters.
 Example:
