--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -1,5 +1,7 @@
 V5.5.1: (planned for 13 Oct 2014)
-  * Fixed issue #479: The style hooks for the VCL styles are now registered for TVirtualStringTree and TVirtualDrawTree instead of TBaseVirtualTree, which makes it easier to use own style hooks in derived classes.  * Fixed issue #473: Return type of GetUtilityImages should be TCustomImageList
+  * Fixed issue #479: The style hooks for the VCL styles are now registered for TVirtualStringTree and TVirtualDrawTree instead of TBaseVirtualTree, which makes it easier to use own style hooks in derived classes.  
+  * Partial fix for issue #478: The standard VCL property StyleElemets (public in TControl in RAD Studio XE3 and higher) is now supported and published for TVirtualStringTree and TVirtualDrawTree (XE3 and higher). This means you can define if the font and the backgrounbd color is taken from the VCL style or the control's properties. Leaving out seBorder is not yet working well, more work will be necessary.
+  *  Fixed issue #473: Return type of GetUtilityImages should be TCustomImageList
   * Fix for issue #470: VCL Styles and sorting failure
   * Added missing inherited to CMMouseEnter()
   * Fixed issue #468: Redundant code in CreateSystemImageSet()
